# kronometer

./: .gitignore  .pre-commit-config.yaml  CNAME  Procfile  index.html  manage.py  params.json  passenger_wsgi.py  pyproject.toml  requirements.txt
ArduinoSensor/: ArduinoSensor.ino
ArduinoSensor/BLESensor/: BLESensor.ino
DummyArduinoSensor/: DummyArduinoSensor.ino  dummy-python-sensor.py
KronometerApp/Kronometer/: build.gradle
android/KronometerApp/: local.properties  settings.gradle
biker/: admin.py  models.py  tests.py  views.py
biker/fixtures/: default_categories.json
biker/migrations/: 0001_initial.py  0002_competition.py  0003_competition_add_section_titles.py  0004_competition_section_2_domestic_only.py  0005_auto_20220906_1245.py  0006_multiple_competitions_20240615_0609.py  0007_alter_biker_category.py
competition/: admin.py  api_views.py  models.py  urls.py  utils.py  views.py
data/: categories.json  competition-2024.json  knej-karlovica-2013.json  knej-karlovica-2014.json  knej-karlovica-2015.json  knej-karlovica-2016.json  knej-karlovica-2017.json  knej-karlovica-2019.json  knej-karlovica-2021.json  knej-karlovica-2022.json  knej-karlovica-2023.json  knej-karlovica-2024.json  sv-primoz-2013.json  sv-primoz-2015.json  sv-primoz-2016.json  sv-primoz-2017.json  sv-primoz-2018.json  sv-primoz-2019.json  ulaka-velika-slevica-2022.json  zelimlje-turjak-2015.json  zelimlje-turjak-2016.json  zelimlje-turjak-2017.json  zelimlje-turjak-2018.json
ios/: TestPlan.xctestplan
kronometer/: asgi.py  settings.py  urls.py  wsgi.py
(+250 files in other folders)
