[project]
name = "kronometer"
version = "1.0.0"
description = ""
authors = [
    { name = "Anze Staric", email = "anze@naringi.bio" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "django-allauth[socialaccount] (>=65.7.0,<66.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "django-stubs-ext (>=5.1.3,<6.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true
warn_unreachable = true

[tool.django-stubs]
django_settings_module = "kronometer.settings"
